# raspberry-pi-os

./: .gitignore  LICENSE  README.md
exercises/lesson01/: CMakeLists.txt  exercises.md
exercises/lesson01/include/: mini_uart.h  mm.h  utils.h
exercises/lesson01/include/peripherals/: mini_uart.h  uart.h
exercises/lesson01/src/: boot.S  kernel.c  linker.ld  linker.qemu.ld  mini_uart.c  uart.c  utils.S
exercises/lesson02/: CMakeLists.txt  Makefile  exercises.md
exercises/lesson02/cmake/: aarch64-gcc-toolchain.cmake
exercises/lesson02/include/: mini_uart.h  utils.h
exercises/lesson02/include/arm/: sysregs.h
exercises/lesson02/include/peripherals/: base.h  mini_uart.h
exercises/lesson02/src/: boot.S  boot.el2.S  kernel.c  linker.ld  mini_uart.c  mm.S
exercises/lesson03/: CMakeLists.txt  exercises.md
exercises/lesson03/include/: entry.h  irq.h  mini_uart.h  mm.h  utils.h
exercises/lesson03/include/peripherals/: gpio.h  timer.h
exercises/lesson03/src/: boot.S  entry.S  kernel.c  mini_uart.c  timer.c  utils.S
exercises/lesson04/: CMakeLists.txt  exercises.md
exercises/lesson04/include/: entry.h  fork.h  mm.h  sched.h  timer.h
exercises/lesson04/include/arm/: sysregs.h
exercises/lesson04/include/peripherals/: irq.h
exercises/lesson04/src/: boot.el3.S  entry.S  fork.c  generic_timer.S  irq.S  irq.c  kernel.c  linker.qemu.ld  mm.c  sched.S  sched.c  timer.c
